--- a/posts/lord-of-the-rings/index.qmd
+++ b/posts/lord-of-the-rings/index.qmd
@@ -17,10 +17,11 @@ related texts and writings, while others enjoy the stories in a more
 transactional context, understanding only what is needed to follow the
 story.
 
-Discussion with a well-versed Tolkien expert or reading along with
-others in a book club can be an avenue towards deeper understanding
-and enjoyment of a piece of literature, but we don't always have
-someone around that fits the bill as a discussion partner.
+For those looking for a more in-depth experience a discussion with a
+well-versed Tolkien expert or reading along with others in a book club
+can be an avenue towards deeper understanding and enjoyment. But we
+don't always have someone around that fits the bill as a discussion
+partner.
 
 My son has recently started delving into *The Lord of the Rings* again
 and it gave me the idea of using Generative AI as a tool for enhancing
