--- a/about.qmd
+++ b/about.qmd
@@ -12,7 +12,7 @@ about:
        href: https://www.linkedin.com/in/bwbenson/
 ---
 
-This is a collection of articles and writings on a variety of topics
-including technology, Artificial Intelligence, music, and books. I'd
-love to hear your constructive comments or feedback on one of the
-social media channels.
+A collection of articles and writings on a variety of topics including
+technology, Artificial Intelligence, music, and books. I'd love to
+hear your constructive comments or feedback on one of the social media
+channels.
