--- a/posts/piano-refinishing/index.qmd
+++ b/posts/piano-refinishing/index.qmd
@@ -10,11 +10,11 @@ lightbox: auto
 ---
 
 In the mid-1990s we were living in Lunenburg, Massachusetts with a
-growing family. My wife and I had family pianos as kids and we were
-looking to purchase an inexpensive piano for all of us to use and
-share.  We found a decent early 1900s upright piano for $100 in
-Winchendon. We transported it back to our house in Lunenburg on a
-utility trailer borrowed from my father and we got a couple of
+growing family. My wife and I both grew up with a piano in the house
+and we were looking to find an inexpensive piano to share as a
+family. We ended up finding a decent early 1900s upright piano for
+$100 in Winchendon. We transported it back to our house in Lunenburg
+on a utility trailer borrowed from my father and we got a couple of
 neighbors to help lug it into the house.
 
 ![Before refinishing as purchased in the 1990s](04_original_green_piano.jpeg){group="piano-photos"}
