--- a/posts/next-winter-song/index.qmd
+++ b/posts/next-winter-song/index.qmd
@@ -86,9 +86,9 @@ often call a *lead sheet*.
 
 Once I am semi-satisfied with what is down on paper, I find it useful
 to give the idea some space and come back to it with fresh look. I
-also have to push myself a bit to stick with the idea, so a break can
-be a useful carrot to bring things to a good stopping place and not
-leave too many loose ends.
+also have to push myself a bit to stick with the idea at the beginning
+of the process, so a break can be a useful carrot to bring things to a
+comfortable stopping place without too many loose ends.
 
 I continued to play and refine smaller aspects of the song and a
 couple of days later I entered it into the MuseScore music notation
