--- a/posts/next-winter-song/index.qmd
+++ b/posts/next-winter-song/index.qmd
@@ -50,12 +50,12 @@ and
 > How many more have died at birth?   
 > Oh how, how can this song survive?   
 
-Some creative ideas are more compelling than others and all
+Some creative ideas are more compelling than others, but all
 compositions are vulnerable to the lack of attention and stewardship
 needed to carry them to the point where they can stand alone as a
-completed work, not to mention the courage needed to reveal yourself
-and your work's imperfections for public criticism or, even worse,
-private judgement.
+completed work. Artists must also develop and nurture the courage
+needed to reveal themselves and their work's imperfections for public
+criticism or, even worse, private judgement.
 
 This is the story of a song that was able to beat the odds and
 survive. The favorable conditions were an afternoon with enough time
