Small fixes to Goodall post

--- a/posts/single-voice/index.qmd
+++ b/posts/single-voice/index.qmd
@@ -38,18 +38,20 @@ nature and the environment in a male-dominated profession.
 The way that Jane Goodall's influence worked through my mother to her
 students and to me, and through us to others, shows me that a single
 person has incredible power to change the world. When Goodall passed
-away yesterday she was on one her speaking tours carrying her message
-of a connectedness, conservation, and responsbility in her 90s. What a
+away yesterday she was in her 90s on a speaking tour carrying her
+message of a connectedness, conservation, and responsbility. What a
 great example of hard work and singleness of purpose.
 
 ![Barbara Benson testing river water](barbara-fieldwork-01.jpeg){group="photos"}
 
 In addition to teaching and mentoring hundreds of students while a
-professor at Cedar Crest College, my mother volunteered time and
-energy working the Sierra Club of Pennsylvania advocating for
-regulations and laws protecting clean water. I learned from her that
-protecting our rivers and streams is one of the most important ways to
-ensure a healthy environment for our planet.
+professor at Cedar Crest College, my mother volunteered her time and
+energy working with the Sierra Club of Pennsylvania advocating for
+regulations and laws protecting clean water. She would read and review
+legislation and drive back and forth to Harrisburg to testify at
+hearings.  I learned from her that protecting our rivers and streams
+is one of the most important ways to ensure a healthy environment for
+our planet.
 
 ![My mother showing my sister and me how to use binoculars](barbara-robin-brent.jpeg){group="photos"}
 
