Small wording change

--- a/posts/single-voice/index.qmd
+++ b/posts/single-voice/index.qmd
@@ -59,7 +59,7 @@ When I am discouraged about the direction of our country and our
 planet I am going to try and use the examples of Jane Goodall and my
 mother to remember how the voice of a single person can make a
 difference and that individual actions can ripple like a wave through
-generations of people who haven't even been born.
+generations of people who have yet to be born.
 
 
 
